# rust-mobile-sample

./: README.md
android/: .gitignore
android/Greetings/: settings.gradle
android/Greetings/app/: build.gradle
android/Greetings/app/src/androidTest/java/com/trust/greetings/: ExampleInstrumentedTest.java
android/Greetings/app/src/main/: AndroidManifest.xml
android/Greetings/app/src/main/java/com/trust/greetings/: MainActivity.java  RustGreetings.java
android/Greetings/app/src/main/res/layout/: activity_main.xml
android/Greetings/app/src/test/java/com/trust/greetings/: ExampleUnitTest.java
android/Greetings/gradle/wrapper/: gradle-wrapper.properties
android/NDK/: cargo-config.toml
cpp/: .gitignore  CMakeCache.txt  CMakeLists.txt  sample.cpp
ios/: .gitignore
rustgreet/: .gitignore  Cargo.toml
rustgreet/src/: lib.rs  rustgreet.h
