[package]
name = "rustgreet"
version = "0.1.0"
authors = ["Catenocrypt <catenocrypt@users.noreply.github.com>"]
#edition = "2020"
description = "Example static library project built for iOS"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "rustgreet"
crate-type = ["staticlib", "cdylib"]
