[package]
name = "rustgreet"
version = "0.1.0"
authors = ["Catenocrypt <catenocrypt@users.noreply.github.com>"]
#edition = "2020"
description = "Example static library project built for iOS"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

[dependencies]

[lib]
name = "rustgreet"
# iOS
#crate-type = ["staticlib", "cdylib"]
# Android
crate-type = ["dylib"]